--- a/style/experience.css
+++ b/style/experience.css
@@ -105,6 +105,7 @@
 #like-img{
   height: 32px;
   margin: auto;
+  cursor: pointer;
 }
 
 #see-comments{
@@ -208,6 +209,14 @@
 
   h1{
     margin-top: 30px;
+  }
+
+  p{
+    font-size: 20px;
+  }
+
+  h3{
+    font-size: 24px;
   }
 
   /*HEADER*/
@@ -333,8 +342,9 @@
   }
 
   .interest p{
+    margin: auto;
     font-size: 18px;
-    line-height: 32px;
+    line-height: 22px;
   }
 
   .obj1, .obj2, .obj3{
