--- a/style/common.css
+++ b/style/common.css
@@ -93,8 +93,9 @@ button{
 }
 
 .interest {
-	width: 30%;
-	height: 25px;
+	/*width: 30%;
+	height: 25px^*/
+    padding: 2px 10px;
 	background-color: #FDFCEC;
 	border-radius: 20px;
 	margin: 5px auto;
@@ -648,5 +649,9 @@ footer{
 
     .experience-r div h3, .experience-r div p{
         text-align: right;
+    }
+
+    .interest{
+        padding: 5px 20px;
     }
 }
