--- a/style/common.css
+++ b/style/common.css
@@ -507,6 +507,128 @@ footer{
     margin: auto;
 }
 
+
+/* MESSAGES POPUP */
+
+#your-chats {
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto 20px;
+  background: rgba(255,255,255,0.05)
+}
+
+#chats {
+  display: flex;
+  margin: 0px auto 10px;
+  overflow: scroll;
+	scrollbar-width: thin;
+	scrollbar-color: rgba(0,0,0,0.25) transparent;
+  gap: 20px
+}
+
+.profile-img-chat {
+  width: 50px;
+  margin: 4px auto
+}
+
+.chat-person {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.date-chat {
+  font-size: 10px
+}
+
+.name-chat {
+  font-size: 15px
+}
+
+#selected-chat {
+  background-color: #FF958C;
+  padding: 10px;
+  border: none;
+  border-radius: 5px
+}
+
+#selected-chat .name-chat, #selected-chat .date-chat, .message-date-small, .message-text {
+  color: black
+}
+
+#chat {
+  margin: auto auto 20px;
+  background: rgba(255,255,255,0.05)
+}
+
+#title-chat {
+  display: flex;
+  margin: 10px auto
+}
+
+#main-chat {
+  height: 30px;
+  margin: auto;
+}
+
+#profile-chat {
+  width: 70px;
+  margin: auto
+}
+
+#horizontal {
+  color: #FF958C;
+}
+
+#in-messages {
+  height: 30vh;
+  overflow: scroll;
+	scrollbar-width: thin;
+	scrollbar-color: rgba(0,0,0,0.25) transparent;
+}
+
+.message {
+  border-radius: 30px;
+  position: relative;
+  margin: 10px auto;
+}
+
+.received-message {
+  background-color: #C65476;
+  margin: 10px auto 10px 20px
+}
+
+.sent-message {
+  background-color: #FF958C;
+  margin: 10px 20px 10px auto
+}
+
+.message-date-small {
+  position: absolute;
+  bottom: 2px;
+  left: 15px;
+  font-size: 10px
+}
+
+.message-text {
+  padding: 10px;
+  text-align: right;
+  margin-right: 20px
+}
+
+.comment-frm {
+  height: 30px;
+  margin-bottom: 20px
+}
+
+.send-btn {
+  height: 30px
+}
+
+p#date-chat {
+  text-align: center;
+}
+
 @media only screen and (min-device-width: 601px) {
     /* For tablets: */
     .col-t-1 {width: 8.33%;}
@@ -648,5 +770,86 @@ footer{
 
     .experience-r div h3, .experience-r div p{
         text-align: right;
+    }
+
+    /* messages */
+
+    #messages-popup {
+      height: 62vh
+    }
+
+    #inside-messages {
+      display: flex;
+      flex-direction: row;
+      height: 60vh
+    }
+
+    #your-chats {
+      margin: auto 0px auto auto;
+      height: 100%
+    }
+
+    #chats {
+      flex-direction: column;
+    }
+
+    #chat {
+      margin-left: 10px;
+      height: 100%
+    }
+
+    #title-chat {
+      margin: 20px auto
+    }
+
+    #main-chat {
+      margin-right: 30px;
+    }
+
+    #profile-chat {
+      margin-left: 10px;
+      margin-right: 15%
+    }
+
+    #in-messages {
+      height: 60%
+    }
+
+    .message {
+      height: 55px;
+    }
+
+    .received-message {
+      margin-left: 10%
+    }
+
+    .sent-message {
+      margin-right: 10%
+    }
+
+    .message-date-small {
+      font-size: 14px
+    }
+
+    .date-chat {
+      font-size: 14px
+    }
+
+    .name-chat {
+      font-size: 20px
+    }
+
+    .profile-img-chat {
+      width: 75px;
+      margin: 10px auto
+    }
+
+    .comment-frm {
+      height: 45px
+    }
+
+    .send-btn {
+      width: 40px;
+      height: 40px
     }
 }
