--- a/style/profile.css
+++ b/style/profile.css
@@ -151,6 +151,10 @@ section{
 	margin-left: 15%
 }
 
+#default-interest {
+	display: none
+}
+
 #interests-remove {
 	overflow: scroll;
 	scrollbar-width: thin;
