--- a/style/common.css
+++ b/style/common.css
@@ -490,11 +490,12 @@ footer{
     margin-left: 3%;
 }
 
-#hidden {
+#hidden, #hidden-input {
     display: none
 }
 
-#input-label {
+#input-label, #input-label-hidden {
+    width: 66.6% !important;
     border: none;
     border-radius: 15px;
     font-size: 20px;
@@ -503,6 +504,8 @@ footer{
     margin: auto;
     padding: 1px;
     cursor: pointer;
+    text-align: center;
+    font-style: italic;
 }
 
 #submit-sign{
@@ -660,7 +663,7 @@ footer{
   height: 30px
 }
 
-p#date-chat {
+p.date-chat {
   text-align: center;
 }
 
