--- a/style/my_exp.css
+++ b/style/my_exp.css
@@ -162,7 +162,7 @@ h3 {
 	grid-template-areas: 'left right';
 }
 
-#create-exp label {
+.exp-label {
 	color: white;
 	width: 80px;
 	font-style: italic;
