--- a/style/common.css
+++ b/style/common.css
@@ -525,7 +525,7 @@ footer{
     font-size: 14px;
 }
 
-#new-interest {
+#new-interest, .new-interest-profile {
     border: none;
     border-radius: 20px;
     height: 30px;
