--- a/style/last_experiences.css
+++ b/style/last_experiences.css
@@ -7,6 +7,17 @@
 */
 
 /*----- MAIN SECTION -----*/
+
+label{
+	font-style: italic;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 20px;
+	color: #FDFCEC;
+	text-align: left;
+	margin: auto;
+}
+
 #main-section{
 	background-color: #1D1E2C;
 	padding-bottom: 30px;
@@ -87,6 +98,10 @@
 
 @media only screen and (min-device-width: 769px) {
 		/*FOR DESKTOP*/
+		label{
+			font-size: 24px;
+		}
+
 		.filter{
 			margin: auto 10px;
 		}
