--- a/style/plan.css
+++ b/style/plan.css
@@ -27,11 +27,25 @@ h3{
 }
 
 h4{
-	transform: translate(-3.33%);
+	font-style: italic;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 21px;
+	text-align: center;
+	color: #FF958C;
 }
 
 h5{
 	font-size: 12px;
+}
+
+label{
+	font-style: italic;
+	font-weight: normal;
+	font-size: 20px;
+	color: #FF958C;
+	text-align: center;
+	margin: auto;
 }
 
 #budget-frm{
