--- a/style/profile.css
+++ b/style/profile.css
@@ -113,7 +113,7 @@ section{
 	flex-direction: column;
 }
 
-#input-label {
+#input-label-prof {
 	color: black;
 	font-style: italic;
 	background-color: white;
