--- a/style/common.css
+++ b/style/common.css
@@ -570,6 +570,8 @@ footer{
 /* MESSAGES POPUP */
 .comment-frm label{
     font-style: italic;
+    text-align: center;
+    margin: auto;
 }
 
 #your-chats {
@@ -692,29 +694,33 @@ p.date-chat {
 }
 
 @media only screen and (min-device-width: 601px) {
-    /* For tablets: */
-    .col-t-1 {width: 8.33%;}
-    .col-t-2 {width: 16.66%;}
-    .col-t-3 {width: 25%;}
-    .col-t-4 {width: 33.33%;}
-    .col-t-5 {width: 41.66%;}
-    .col-t-6 {width: 50%;}
-    .col-t-7 {width: 58.33%;}
-    .col-t-8 {width: 66.66%;}
-    .col-t-9 {width: 75%;}
-    .col-t-10 {width: 83.33%;}
-    .col-t-11 {width: 91.66%;}
-    .col-t-12 {width: 100%;}
+  /* For tablets: */
+  .col-t-1 {width: 8.33%;}
+  .col-t-2 {width: 16.66%;}
+  .col-t-3 {width: 25%;}
+  .col-t-4 {width: 33.33%;}
+  .col-t-5 {width: 41.66%;}
+  .col-t-6 {width: 50%;}
+  .col-t-7 {width: 58.33%;}
+  .col-t-8 {width: 66.66%;}
+  .col-t-9 {width: 75%;}
+  .col-t-10 {width: 83.33%;}
+  .col-t-11 {width: 91.66%;}
+  .col-t-12 {width: 100%;}
 
-    /*----------------------HEADER------------------------------*/
-    header{
-    display: flex;
-    flex-wrap: wrap;
-    }
+  /*----------------------HEADER------------------------------*/
+  header{
+  display: flex;
+  flex-wrap: wrap;
+  }
 
-    #show-menu{
-    display: none;
-    }
+  p{
+    line-height: 20px;
+  }
+
+  #show-menu{
+  display: none;
+  }
 
 	#sign-btn{
 		display: block;
