--- a/style/experience.css
+++ b/style/experience.css
@@ -8,6 +8,15 @@
 
 /*----- MAIN SECTION -----*/
 
+h3{
+  margin: 20px auto;
+}
+
+h4{
+  font-size: 20px;
+  margin: 10px auto;
+}
+
 #main-sect{
   background-color: #1D1E2C;
   display: inline-block;
@@ -54,6 +63,7 @@
 
 #images, #videos{
   display: flex;
+  flex-wrap: wrap;
   margin: 30px auto;
   text-align: center;
 
@@ -224,7 +234,8 @@
   }
 
   p{
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 24px;
   }
 
   h3{
