--- a/style/button.css
+++ b/style/button.css
@@ -100,7 +100,7 @@
 }
 
 .b-contain input[type="checkbox"]:disabled ~ .b-input {
-	background: #C4D7F2
+	background: #C4D7F2;
 	border-color: rgba(184, 194, 204, 1);
 	opacity: 0.6;
 	cursor: not-allowed;
