--- a/style/profile.css
+++ b/style/profile.css
@@ -1,10 +1,5 @@
-/*Palette:
-- Oscuro: #1D1E2C
-- Azulito: #C4D7F2
-- Salmón: #FF958C
-- Piel de limón: #FDFCEC
-- Granate raro no sé: #B6244F
-*/
+/* IMPLEMENTS profile.html SPECIFIC DESIGN */
+
 /*----- MAIN SECTION -----*/
 section{
 	background-color: #1D1E2C;
