--- a/style/about.css
+++ b/style/about.css
@@ -1,3 +1,6 @@
+/* IMPLEMENTS about_us.html SPECIFIC DESIGN */
+
+
 .clearfix_about::after {
     content: "";
     clear: both;
@@ -29,10 +32,12 @@ section{
     margin: auto;
 }
 
+/* TABLET VERSION */
 @media only screen and (min-device-width: 601px) {
 
 }
 
+/*DESKTOP VERSION*/
 @media only screen and (min-device-width: 769px) {
     #image_about{
         float:left;
