--- a/style/index.css
+++ b/style/index.css
@@ -1,10 +1,4 @@
-/*Palette:
-- Oscuro: #1D1E2C
-- Azulito: #C4D7F2
-- Salmón: #FF958C
-- Piel de limón: #FDFCEC
-- Granate raro no sé: #B6244F
-*/
+/* IMPLEMENTS index.html SPECIFIC DESIGN */
 
 /*----- MAIN SECTION -----*/
 section{
